<resources>
    <string name="app_name">FruitsVegetablesMall</string>
    <string name="main_activity_bottom_main">首页</string>
    <string name="main_activity_bottom_classification">分类</string>
    <string name="main_activity_bottom_inventory">盘库</string>
    <string name="main_activity_bottom_shopping_car">购物车</string>
    <string name="main_activity_bottom_mine">我的</string>
    <string name="common_count">x%1$s</string>
    <string name="common_money">￥%1$s</string>
    <string name="main_alert_cancel">取消</string>
    <string name="main_alert_delete">删除</string>
    <string name="common_exit_app">再按一次退出应用</string>
    <string name="common_no_more_date">无更多数据</string>
    <string name="common_netdata_error"> 网络数据出错，\n请检查网络设置或联系相关人员</string>
    <string name="common_connection_error">网络连接出错，请检查设置</string>
    <string name="call_back_loading">加载中...</string>
    <string name="call_back_loading_more">努力加载中...</string>
    <string name="call_back_loading_failed">加载失败</string>
    <string name="call_back_no_network">当前网络不可用，请检查网络情况</string>
    <string name="call_back_network_error">网络错误 %1$d</string>
    <string name="call_back_requext_json_error">数据解析异常</string>
    <string name="search_keyword_activity_hint">输入商品名称</string>
    <string name="recommend_list_item_price_unit">/份</string>
    <string name="shopping_car_empty_to_main">去首页看看</string>
    <string name="total_money">合计:¥%1$s</string>
    <string name="settlement">结算（%1$s）</string>
    <string name="order_all">全部订单</string>
    <string name="order_to_be_received">待收货</string>
    <string name="mine_complete">已完成</string>
    <string name="mine_address">收货地址</string>
    <string name="mine_help">帮助中心</string>
    <string name="mine_connect_us">联系我们</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="logout">退出登录</string>
    <string name="login_activity_user_id_hint">请输入账号</string>
    <string name="login_activity_password_hint">请输入密码</string>
    <string name="login_activity_register_text">立即注册</string>
    <string name="login_activity_sign_text">登录</string>
    <string name="add_shopping_car">加入购物车</string>
    <string name="common_confirm">确定</string>
    <string name="total_goods_amount">商品金额</string>
    <string name="memo">备注</string>
    <string name="memo_hint">选填，可以说明特殊需求</string>
    <string name="success">提交成功</string>
    <string name="success_memo">我们将尽快为您安排发货</string>
    <string name="success_order_num">订单编号</string>
    <string name="success_name">收件人</string>
    <string name="success_address">收件地址</string>
    <string name="success_amount">订单金额</string>
    <string name="success_order_detail">订单详情</string>
    <string name="coupon_title">优惠</string>
    <string name="coupon_choose">已选推荐优惠</string>
    <string name="common_amount">¥%.2f</string>
    <string name="common_amount2">%.2f</string>
    <string name="shopping_stock_text">库存：%1$s</string>
    <string name="toast_for_LoginActivity_content_0">请填写账号</string>
    <string name="toast_for_LoginActivity_content_1">请填写密码</string>
    <string name="toast_for_LoginActivity_content_2">请填写姓名</string>
    <string name="toast_for_LoginActivity_content_3">请填写手机号</string>
    <string name="toast_for_LoginActivity_content_4">请填写收货地址</string>
    <string name="toast_for_LoginActivity_content_5">请填写收货手机</string>
    <string name="btn_clear_overdue">清空失效商品</string>
    <string name="item_overdue">失效</string>
    <string name="shopping_car_item_goods_unit">单位：%1$s</string>
    <string name="shoppingCar_title">购物车</string>
    <string name="decimalformate">######0.00</string>
    <string name="delete_sure_num">确认将这%d个商品删除？</string>
    <string name="delete_sure">确认删除选中商品？</string>
    <string name="delete_all_sure">确认清空失效商品？</string>
    <string name="delete_all_success">清空无效商品成功</string>
    <string name="delete_success">删除成功</string>
    <string name="shoppingcar_select_empty">没有选择要删除的商品</string>
    <string name="coupon_amount">优惠%.2f元</string>
    <string name="order_payment">AWAITING_PAYMENT</string>
    <string name="order_delivery">AWAITING_DELIVERY</string>
    <string name="order_complete">COMPLETE</string>
    <string name="order_cancel">CANCEL</string>
    <string name="order_payment_overdue">PAYMENT_OVERDUE</string>
    <string name="AWAITING_PAYMENT">待支付</string>
    <string name="AWAITING_DELIVERY">待收货</string>
    <string name="COMPLETE">已完成</string>
    <string name="CANCEL">已取消</string>
    <string name="order_all_status">AWAITING_CONFIRMATION,AWAITING_PAYMENT,AWAITING_DELIVERY,COMPLETE,CANCEL</string>
    <string name="order_num">订单编号：%s</string>
    <string name="order_total">共%d种商品</string>
    <string name="order_price">支付金额：¥%.2f</string>
    <string name="search_keyword_activity_search_history">历史搜索</string>
    <string name="register_btn">注册</string>
    <string name="register_username">账号</string>
    <string name="register_password">密码</string>
    <string name="register_name">姓名</string>
    <string name="register_mobile">手机号</string>
    <string name="register_address">地址</string>
    <string name="register_receivingPhone">收货手机号</string>
    <string name="register_back">已有账号？立即登录</string>
    <string name="success_receiver">收货手机号</string>
</resources>
