<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.activity.LoginActivity">

    <include
        android:id="@+id/frame_toolbar"
        layout="@layout/fram_toolbar" />

    <LinearLayout
        android:id="@+id/ll_main_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_50"
            android:layout_marginEnd="@dimen/spacing_50"
            android:background="@drawable/bg_edit_text_bottom_stroke"
            android:drawableStart="@drawable/login_ed_psw_gray"
            android:drawablePadding="@dimen/spacing_10"
            android:hint="@string/register_username"
            android:maxLines="1"
            android:paddingTop="@dimen/spacing_10"
            android:paddingBottom="@dimen/spacing_10"
            android:singleLine="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/grey_999999"
            android:textSize="@dimen/font_14" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_50"
            android:layout_marginEnd="@dimen/spacing_50"
            android:background="@drawable/bg_edit_text_bottom_stroke"
            android:drawableStart="@drawable/login_ed_psw_gray"
            android:drawablePadding="@dimen/spacing_10"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingTop="@dimen/spacing_10"
            android:paddingBottom="@dimen/spacing_10"
            android:singleLine="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/grey_999999"
            android:textSize="@dimen/font_14" />

        <EditText
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_50"
            android:layout_marginEnd="@dimen/spacing_50"
            android:background="@drawable/bg_edit_text_bottom_stroke"
            android:drawableStart="@drawable/login_ed_psw_gray"
            android:drawablePadding="@dimen/spacing_10"
            android:hint="@string/register_name"
            android:maxLines="1"
            android:paddingTop="@dimen/spacing_10"
            android:paddingBottom="@dimen/spacing_10"
            android:singleLine="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/grey_999999"
            android:textSize="@dimen/font_14" />

        <EditText
            android:id="@+id/et_register_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_50"
            android:layout_marginEnd="@dimen/spacing_50"
            android:background="@drawable/bg_edit_text_bottom_stroke"
            android:drawableStart="@drawable/login_ed_phone_gray"
            android:drawablePadding="@dimen/spacing_10"
            android:hint="@string/register_mobile"
            android:maxLines="1"
            android:paddingTop="@dimen/spacing_10"
            android:paddingBottom="@dimen/spacing_10"
            android:singleLine="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/grey_999999"
            android:textSize="@dimen/font_14" />

        <EditText
            android:id="@+id/et_register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_50"
            android:layout_marginEnd="@dimen/spacing_50"
            android:background="@drawable/bg_edit_text_bottom_stroke"
            android:drawableStart="@drawable/login_ed_psw_gray"
            android:drawablePadding="@dimen/spacing_10"
            android:hint="@string/register_address"
            android:maxLines="1"
            android:paddingTop="@dimen/spacing_10"
            android:paddingBottom="@dimen/spacing_10"
            android:singleLine="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/grey_999999"
            android:textSize="@dimen/font_14" />

        <EditText
            android:id="@+id/et_register_receivingPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_50"
            android:layout_marginEnd="@dimen/spacing_50"
            android:background="@drawable/bg_edit_text_bottom_stroke"
            android:drawableStart="@drawable/login_ed_psw_gray"
            android:drawablePadding="@dimen/spacing_10"
            android:hint="@string/register_receivingPhone"
            android:maxLines="1"
            android:paddingTop="@dimen/spacing_10"
            android:paddingBottom="@dimen/spacing_10"
            android:singleLine="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/grey_999999"
            android:textSize="@dimen/font_14" />

        <TextView
            android:id="@+id/tw_register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/spacing_10"
            android:layout_marginEnd="@dimen/spacing_50"
            android:gravity="center"
            android:text="@string/register_back"
            android:textColor="@color/blue_4289ff"
            android:textSize="@dimen/font_14" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_main_ed"
        android:layout_marginLeft="@dimen/spacing_50"
        android:layout_marginTop="145dp"
        android:layout_marginRight="@dimen/spacing_50"
        android:background="@drawable/btn_common_100_radius_button"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/register_btn"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/font_20" />

</RelativeLayout>