<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_ffffff"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.main.activity.MainActivity">
    <com.huangyiyang.fruitsvegetablesmall.view.main.NoSwipeableViewPager
        android:id="@+id/view_page"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_line"
        android:layout_weight="1">

    </com.huangyiyang.fruitsvegetablesmall.view.main.NoSwipeableViewPager>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/view_page"
        app:layout_constraintBottom_toTopOf="@id/rg_main_activity"
        android:background="@color/grey_666666" />

    <RadioGroup
        android:id="@+id/rg_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="@dimen/spacing_5"
        android:paddingBottom="@dimen/spacing_5">

        <RadioButton
            android:id="@+id/main_activity_bottom_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/bottom_bar_main"
            android:gravity="center"
            android:text="@string/main_activity_bottom_main"
            android:textColor="@drawable/main_bottom_bat_text_color"
            android:textSize="@dimen/font_10" />

        <RadioButton
            android:id="@+id/main_activity_bottom_classification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/bottom_bar_classification"
            android:gravity="center"
            android:text="@string/main_activity_bottom_classification"
            android:textColor="@drawable/main_bottom_bat_text_color"
            android:textSize="@dimen/font_10" />

        <RadioButton
            android:id="@+id/main_activity_bottom_shopping_car"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/bottom_bar_shopping_car"
            android:gravity="center"
            android:text="@string/main_activity_bottom_shopping_car"
            android:textColor="@drawable/main_bottom_bat_text_color"
            android:textSize="@dimen/font_10" />


        <RadioButton
            android:id="@+id/tab_bottom_bar_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/bottom_bar_mine"
            android:gravity="center"
            android:text="@string/main_activity_bottom_mine"
            android:textColor="@drawable/main_bottom_bat_text_color"
            android:textSize="@dimen/font_10" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_shopping_count"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_circle_red_30dp"
        android:gravity="center"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/font_12"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line" />
</androidx.constraintlayout.widget.ConstraintLayout>